添加一个简单的库存服务

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
         <module>gateway/bootstrap</module>
         <module>gateway/util</module>
         <module>gateway/web</module>
+        <module>inventory-service/bootstrap</module>
+        <module>inventory-service/dal</module>
+        <module>inventory-service/model</module>
+        <module>inventory-service/service</module>
+        <module>inventory-service/util</module>
+        <module>inventory-service/web</module>
     </modules>
 
     <properties>
