--- a/user-service/bootstrap/src/test/resources/application-test.yml
+++ b/user-service/bootstrap/src/test/resources/application-test.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/flight_booking_test
     username: root
-    password: root123
+    password: liajay@0807 #root123
   jpa:
     hibernate:
       ddl-auto: create-drop  # 测试时自动创建表，测试结束后删除
