--- a/inventory-service/dal/pom.xml
+++ b/inventory-service/dal/pom.xml
@@ -19,16 +19,11 @@
     </properties>
 
     <dependencies>
-        <!-- Spring Data JPA -->
+        <!-- MyBatis Spring Boot Starter -->
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-        </dependency>
-
-        <!-- JPA API -->
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.3.1</version>
         </dependency>
 
         <!-- Spring Framework -->
