--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
         <jwt.version>0.11.5</jwt.version>
         <!-- Jackson 版本 -->
         <jackson.version>2.15.2</jackson.version>
+        <!-- MyBatis 版本 -->
+        <mybatis.version>2.3.1</mybatis.version>
+        <!-- PageHelper 版本 -->
+        <pagehelper.version>1.4.6</pagehelper.version>
     </properties>
 
     <dependencyManagement>
@@ -87,11 +91,18 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- MyBatis Plus -->
+            <!-- MyBatis Spring Boot Starter -->
             <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>${mybatis-plus.version}</version>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+
+            <!-- PageHelper分页插件 -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.version}</version>
             </dependency>
 
             <!-- Druid 数据库连接池 -->
