--- a/order-service/service/pom.xml
+++ b/order-service/service/pom.xml
@@ -10,47 +10,27 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>order-bootstrap</artifactId>
-    <description>订单服务启动模块</description>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <artifactId>order-service-layer</artifactId>
+    <description>订单服务业务逻辑层</description>
 
     <dependencies>
         <dependency>
             <groupId>com.liajay.flightbooking</groupId>
-            <artifactId>order-web</artifactId>
+            <artifactId>order-dal</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- Spring Boot Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <!-- MySQL 驱动 -->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-        </dependency>
 
-        <!-- Spring Boot Starter Test -->
+        <!-- Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
