添加订单展示功能

--- a/inventory-service/web/pom.xml
+++ b/inventory-service/web/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>com.liajay.flightbooking</groupId>
-            <artifactId>inventory-service-layer</artifactId>
+            <artifactId>inventory-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
