--- a/inventory-service/dal/pom.xml
+++ b/inventory-service/dal/pom.xml
@@ -19,6 +19,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.liajay.flightbooking</groupId>
+            <artifactId>inventory-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- MyBatis Spring Boot Starter -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
