--- a/inventory-service/service/pom.xml
+++ b/inventory-service/service/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>inventory-service-layer</artifactId>
+    <artifactId>inventory-service</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -19,11 +19,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.liajay.flightbooking</groupId>
-            <artifactId>inventory-dal</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>com.liajay.flightbooking</groupId>
