--- a/order-service/model/pom.xml
+++ b/order-service/model/pom.xml
@@ -14,6 +14,11 @@
     <description>订单服务模型层</description>
 
     <dependencies>
+        <dependency>
+            <groupId>com.liajay.flightbooking</groupId>
+            <artifactId>order-dal</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- Jackson for JSON processing -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
