--- a/order-service/service/pom.xml
+++ b/order-service/service/pom.xml
@@ -10,13 +10,13 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>order-service-layer</artifactId>
+    <artifactId>order-service</artifactId>
     <description>订单服务业务逻辑层</description>
 
     <dependencies>
         <dependency>
             <groupId>com.liajay.flightbooking</groupId>
-            <artifactId>order-dal</artifactId>
+            <artifactId>order-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
