--- a/order-service/web/pom.xml
+++ b/order-service/web/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.liajay.flightbooking</groupId>
-            <artifactId>order-service-layer</artifactId>
+            <artifactId>order-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
