--- a/order-service/service/pom.xml
+++ b/order-service/service/pom.xml
@@ -20,6 +20,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.liajay.flightbooking</groupId>
+            <artifactId>order-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Spring Boot Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
